# snifff

./: README.md  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  geolocator.rs  lib.rs  main.rs  permissions.rs  sniffer.rs
src/components/: ConnectionTable.tsx  FilterBar.tsx  Header.tsx  Settings.tsx  StatsPanel.tsx  WorldMap.tsx
src/hooks/: useSettings.ts
src/lib/: types.ts
